--- a/manifest.json
+++ b/manifest.json
@@ -2,31 +2,31 @@
   "name": "Weather",
   "short_name": "Weather",
   "icons": [{
-    "src": "/MIDIScript/images/icons/icon-128x128.png",
+    "src": "/FirstPWA/images/icons/icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     }, {
-      "src": "/MIDIScript/images/icons/icon-144x144.png",
+      "src": "/FirstPWA/images/icons/icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     }, {
-      "src": "/MIDIScript/images/icons/icon-152x152.png",
+      "src": "/FirstPWA/images/icons/icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     }, {
-      "src": "/MIDIScript/images/icons/icon-192x192.png",
+      "src": "/FirstPWA/images/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     }, {
-      "src": "/MIDIScript/images/icons/icon-256x256.png",
+      "src": "/FirstPWA/images/icons/icon-256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     }, {
-      "src": "/MIDIScript/images/icons/icon-512x512.png",
+      "src": "/FirstPWA/images/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }],
-  "start_url": "/MIDIScript/index.html",
+  "start_url": "/FirstPWA/index.html",
   "display": "standalone",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2"
